--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,7 @@
 	    	<exclude name="icafe.jar"/>
 	    </fileset>
     </path>
+	<typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="antlib:org.apache.maven.artifact.ant" classpathref="icafe.classpath" />
     <fileset id="icafe.source.path" dir="src" defaultexcludes="yes">
         <include name="**/*.java"/>
 		<exclude name="**/document/**/*.java"/>
@@ -75,6 +76,17 @@
 		<delete file="{jar}"/>
 		<copy file="dist/${artifactId}-${version}.jar" todir="lib"/>
 	</target>
+	<target name="install" depends="package, package-snapshot" description="install snapshot version to local Maven repository">
+   	    <artifact:mvn>
+   	        <arg value="org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file" />
+      		<arg value="-DgroupId=${groupId}" />
+      		<arg value="-DartifactId=${artifactId}" />
+      		<arg value="-Dversion=${version}" />
+      		<arg value="-Dpackaging=jar" />
+      		<arg value="-DpomFile=${basedir}/pom.xml" />
+      		<arg value="-Dfile=${basedir}/${jar}" />
+    	</artifact:mvn>
+    </target>
 	<target name="deploy" depends="package, package-snapshot" description="deploy snapshot version to Maven snapshot repository">
    	    <artifact:mvn>
    	        <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
